dark mode style fixes + org overview counts

--- a/src/styles/si-insights/components/si-class-list.scss
+++ b/src/styles/si-insights/components/si-class-list.scss
@@ -8,7 +8,7 @@
 
   .si-class-list-empty-message {
     padding: 1rem;
-    color: rgba(0,0,0,0.30);
+    // color: rgba(0,0,0,0.30);
     text-align: center;
     width: 100%;
   }
